--- a/HW_9/index.html
+++ b/HW_9/index.html
@@ -24,16 +24,19 @@
     <script src="./script.js" defer></script>
   </head>
   <body>
+    <!--Задание 1-->
+    <div>
     <input id="from" type="text" />
     В инпуте написано: <span style="color: magenta";></span>
-
-    <br />
-
+</div>
+   <br>
+  <!--Задание 2-->
+  <div>
     <button class="messageBtn">Показать блок</button>
     <div class="message">Привет :)</div>
-
+</div>
     <br />
-
+  <!--Задание 3-->
     <form>
       <label>
         Первый инпут:
